--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-CLOUDINARY_URL=cloudinary://474673267526452:4djk8yXIzUrjDGmanncSRzfZqcA@dcrqyxbds
+CLOUDINARY_URL=cloudinary://424712991458962:5z2Ch5xrsz2w5OqTeJ8ZCRsJC-o@floflo10
